--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         app:layout_constraintVertical_bias="0.318" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/floorplan"
         android:layout_width="167dp"
         android:layout_height="134dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
