--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/floorplan"
         android:layout_width="189dp"
         android:layout_height="212dp"
         app:layout_constraintBottom_toBottomOf="parent"
