--- a/app/src/main/res/layout/activity_moreinfo.xml
+++ b/app/src/main/res/layout/activity_moreinfo.xml
@@ -22,7 +22,7 @@
         android:id="@+id/projectname"
         android:layout_width="290dp"
         android:layout_height="47dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         android:text="Rohan Abhilasha"
         android:textColor="@android:color/black"
         android:textSize="30sp"
@@ -36,8 +36,8 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="56dp"
         android:text="Unit No."
         app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +47,8 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Unit Type"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +58,8 @@
         android:id="@+id/textView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Balcony Area"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,8 +69,8 @@
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Utility Area"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,8 +80,8 @@
         android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Parking"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,8 +91,8 @@
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Floor No."
         app:layout_constraintStart_toStartOf="parent"
@@ -102,8 +102,8 @@
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="Total Ag Amt."
         app:layout_constraintStart_toStartOf="parent"
@@ -113,8 +113,8 @@
         android:id="@+id/textView25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="16dp"
         android:text="carpet_area"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,14 +133,14 @@
 
     <TextView
         android:id="@+id/Unittype"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="31dp"
+        android:layout_height="15dp"
         android:layout_marginStart="168dp"
         android:layout_marginLeft="168dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         android:text="201"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toEndOf="@+id/textView23"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -210,23 +210,23 @@
         app:layout_constraintTop_toBottomOf="@+id/Balconyarea" />
 
     <ImageView
-        android:id="@+id/floorplan"
-        android:layout_width="255dp"
-        android:layout_height="195dp"
-        android:layout_marginTop="56dp"
-        android:foregroundGravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView30"
-        app:srcCompat="@drawable/floormoreinfo" />
-
-    <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="57dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="23dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
+
+    <ViewFlipper
+        android:id="@+id/v_flipper"
+        android:layout_width="351dp"
+        android:layout_height="222dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
