--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,25 +11,159 @@
 
     <ViewFlipper
         android:id="@+id/v_flipper"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_width="411dp"
+        android:layout_height="217dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" >
+
+    </ViewFlipper>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="99dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="false"
+        android:text="click here to get moreinfo"
+        android:textColor="@color/colorPrimary5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="52dp"
+        android:gravity="center"
+        android:text="Total Ag Amt."
+        app:fontFamily="sans-serif-condensed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/v_flipper" />
+
+    <TextView
+        android:id="@+id/totalagamt"
+        android:layout_width="116dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/colorPrimary4"
+        android:gravity="center"
+        android:text="43,27,300/-"
+        android:textColor="@color/colorPrimary1"
+        android:textSize="18sp"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="80dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="52dp"
+        android:gravity="center"
+        android:text="Paid Amt."
+        app:fontFamily="sans-serif-condensed"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/v_flipper" />
+
+    <TextView
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:gravity="center"
+        android:text="Balance Amt."
+        app:fontFamily="sans-serif-condensed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.68"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/v_flipper" />
+
+    <TextView
+        android:id="@+id/paidamt"
+        android:layout_width="116dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/colorPrimary4"
+        android:gravity="center"
+        android:text="41,10,935/-"
+        android:textColor="@color/colorPrimary2"
+        android:textSize="18sp"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintStart_toEndOf="@+id/totalagamt"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="116dp"
+        android:layout_height="54dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/colorPrimary4"
+        android:gravity="center"
+        android:text="02,16,364/-"
+        android:textColor="@color/colorPrimary3"
+        android:textSize="18sp"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintStart_toEndOf="@+id/paidamt"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="406dp"
+        android:layout_height="47dp"
+        android:gravity="center"
+        android:text="Welcome to Rohan Builder's customer Portal"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="57dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="4dp"
-        android:clickable="false"
-        android:text="moreinfo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:id="@+id/daysforposession"
+        android:layout_width="101dp"
+        android:layout_height="93dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="112dp"
+        android:layout_marginLeft="112dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/circular_textview_drawable"
+        android:gravity="center"
+        android:text="576"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/paidamt" />
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="122dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
+        android:text="Days remaining for possession..!!"
+        android:textColor="@color/cirular_textview_background"
+        android:textSize="16sp"
+        app:fontFamily="sans-serif-condensed-medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/paidamt" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
