with moreinfo text at centre

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="white">#FFFFFF</color>
     <color name="cirular_textview_background">#F84B4B</color>
 
-    <color name="colorPrimary5">#0000EE</color>
+    <color name="colorPrimary5">#565658</color>
 </resources>
