--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="false"
+    android:foregroundGravity="center"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,17 +19,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" >
+        app:layout_constraintTop_toBottomOf="@+id/textView16">
 
     </ViewFlipper>
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="99dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="88dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginRight="160dp"
         android:clickable="false"
-        android:text="click here to get moreinfo"
+        android:gravity="center"
+        android:text="moreinfo"
         android:textColor="@color/colorPrimary5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -139,8 +142,8 @@
         android:layout_width="101dp"
         android:layout_height="93dp"
         android:layout_centerInParent="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/circular_textview_drawable"
         android:gravity="center"
@@ -155,9 +158,9 @@
         android:id="@+id/textView18"
         android:layout_width="122dp"
         android:layout_height="55dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginRight="56dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginRight="44dp"
         android:text="Days remaining for possession..!!"
         android:textColor="@color/cirular_textview_background"
         android:textSize="16sp"
